<resources>
    <string name="app_name">AppPesoIdealIMC</string>
    <string name="initial_page_title">Selecione uma opção:</string>
    <string name="ideal_weight_man">Peso ideal homem</string>
    <string name="ideal_weight_woman">Peso ideal mulher</string>
    <string name="calculate_imc">Calcular IMC</string>
    <string name="about">Sobre o app</string>
    <string name="type_your_height">Digite sua altura:</string>
    <string name="calculate">Calcular</string>
    <string name="result">Resultado</string>
    <string name="tv_height_imc">Digite sua altura:</string>
    <string name="tv_weight_imc">Digite seu peso:</string>
    <string name="name_creator">Felipe Augusto de Almeida</string>
    <string name="register_creator">20417054</string>
    <string name="class_creator">Ciências da Computação</string>
    <string name="font_title"> Fonte das fórmulas: </string>
    <string name="font">mdsaude.com</string>
</resources>
