<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uam.com.br.apppesoidealimc.AboutActivity">

    <TextView
        android:id="@+id/about_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_creator"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/about_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_creator"
        android:layout_below="@+id/about_name"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/about_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_creator"
        android:layout_below="@+id/about_register"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/about_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_creator"
        android:layout_below="@+id/about_class"
        android:textSize="20dp"/>

</RelativeLayout>
