<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_imc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uam.com.br.apppesoidealimc.IMCActivity">

    <TextView
        android:id="@+id/tv_imc_height"
        android:text="@string/tv_height_imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_imc_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_imc_height"
        android:ems="15"/>

    <TextView
        android:id="@+id/tv_imc_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_weight_imc"
        android:layout_below="@+id/et_imc_height"/>

    <EditText
        android:id="@+id/et_imc_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:layout_below="@+id/tv_imc_weight"/>

    <Button
        android:id="@+id/btn_imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_below="@+id/et_imc_weight"
        android:onClick="calculateIMC"/>

</RelativeLayout>
